[gd_scene load_steps=12 format=3 uid="uid://dcxh0ihn0n3ik"]

[ext_resource type="Theme" uid="uid://cptlnk3vxajih" path="res://Themes/location_theme.tres" id="1_yh7hs"]
[ext_resource type="Shader" uid="uid://dovh6a6atjsxx" path="res://Shaders/sliding_background.gdshader" id="2_7lkhx"]
[ext_resource type="Script" uid="uid://b2ix37ryg5cg1" path="res://Scenes/location.gd" id="2_ln1cq"]
[ext_resource type="Texture2D" uid="uid://bw2dkfg3ersv0" path="res://Shaders/kort-ww2-background.jpg" id="3_ln1cq"]
[ext_resource type="Texture2D" uid="uid://cu4ng8a3evw5l" path="res://Assets/Icons/arrow_left.png" id="3_pxc7m"]
[ext_resource type="PackedScene" uid="uid://dud0nadirnaup" path="res://Scenes/audio_player.tscn" id="5_yh7hs"]
[ext_resource type="Texture2D" uid="uid://cy5ngedjjufbs" path="res://Assets/Icons/rewind.png" id="6_jgc65"]
[ext_resource type="Texture2D" uid="uid://c64cvrho7juew" path="res://Assets Prototyping/df.PNG" id="7_ln1cq"]
[ext_resource type="Texture2D" uid="uid://dnc4bytlgm37e" path="res://Assets/Icons/fast_forward.png" id="8_2heo8"]
[ext_resource type="Texture2D" uid="uid://2ekm02hi16v6" path="res://Assets/Icons/zoom_in.png" id="8_labed"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8bai"]
shader = ExtResource("2_7lkhx")
shader_parameter/pattern_sampler = ExtResource("3_ln1cq")
shader_parameter/bg_color = Color(0.362829, 0.362829, 0.362829, 1)
shader_parameter/pattern_color = Color(0, 0, 0, 1)
shader_parameter/pattern_size = 2000.0

[node name="UI-prototyping-location" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yh7hs")
script = ExtResource("2_ln1cq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_x8bai")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 76.0
offset_right = 891.0
offset_bottom = 1016.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
text = "Den 10. februar 1944 skrev Svendborg Avis: \"Den anrettede Skade ved bombeeksplosionerne i Svendborg vil beløbe sig til langt over en halv Million kr.” For natten før, 9. februar 1944 ca. kl. 01.00, blev kriminalpolitiets lokaler i Tinghuset ramt af en voldsom eksplosion. Lufttrykket fra eksplosionen var så voldsom at ruderne ned gennem Nannasvej og ned at Bagergade trykkede ind. Selv langs Vestergade var samtlige butikker rørt af lufttrykket og stykker af mursten blev fundet op til 100 meter fra eksplosions stedet.

Avisen beretter bl.a. hvordan tagene langs Vestergade var delvist revet af, en bagerforretning overfor rådhuset var inventaret, en nærliggende lejlighed blev døren ind til sovekammeret slynget ind i sengen og hvordan andre steder at lufttrykket kastede folk ud af deres senge.

Det er uvist, hvem der stod bag dette angreb på Tinghuset. Oprindelsen af eksplosionen skulle have været kommet fra en grøn kuffert, men det vides ikke hvordan den er blevet placeret der. Det kan spekuleres at motivet bag angrebet var på baggrund af at det danske politi i denne periode arresterede modstandsfolk, og at politiet muligvis sad inde med materiale der kunne skade modstandsbevægelsen. I eksplosionen gik mange uerstattelige papirer bort, som blev opbevaret i kriminalpolitiets ekspeditionslokale.

Samme nat, en time efterfølgende, var der også en eksplosion på Møllergade 22.

Samlet mellem eksplosionen ved Tinghuset og Møllergade var 94 ejendomme beskadiget, og reparationerne ville beløbe sig til ‘langt over en halv million kr.’ (En halv million er ca. 12.596.923 kr i 2024)."

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="AudioPlayer" parent="VBoxContainer/HBoxContainer" instance=ExtResource("5_yh7hs")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="FullscreenViewer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenImage" type="TextureRect" parent="FullscreenViewer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 5

[node name="FullscreenExitButton" type="Button" parent="FullscreenViewer/FullscreenImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
icon_alignment = 2
vertical_icon_alignment = 2

[node name="BackToMap" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 144.0
scale = Vector2(0.883355, 0.388725)
icon = ExtResource("3_pxc7m")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 904.0
offset_top = 55.0
offset_right = 1879.0
offset_bottom = 995.0

[node name="ImageViewer" type="HBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer3/ImageViewer"]
layout_mode = 2

[node name="PreviousButton" type="Button" parent="VBoxContainer3/ImageViewer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 300)
layout_mode = 2
icon = ExtResource("6_jgc65")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer3/ImageViewer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_yh7hs")
texture = ExtResource("7_ln1cq")
expand_mode = 1
stretch_mode = 5

[node name="FullscreenButton" type="Button" parent="VBoxContainer3/ImageViewer/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
icon_alignment = 2
vertical_icon_alignment = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer3/ImageViewer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer3/ImageViewer/CenterContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 300)
layout_mode = 2
icon = ExtResource("8_2heo8")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer3"]
visible = false
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("8_labed")
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NavBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
